package com.fashionstore.core.model;

import com.fasterxml.jackson.annotation.JsonManagedReference;
import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
import jakarta.persistence.*;
import lombok.*;
import java.math.BigDecimal;
import java.time.LocalDateTime;
import java.util.List;

@Entity
@Table(name = "orders")
@Getter
@Setter
@NoArgsConstructor
@AllArgsConstructor
@Builder
public class Order {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Integer id;

    @Column(name = "shop_id")
    private Integer shopId;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "user_id", nullable = false)
    @JsonIgnoreProperties({"hibernateLazyInitializer", "handler"})
    private User user;

    @Column(name = "order_type", nullable = false, length = 50)
    private String orderType; // RETAIL, WHOLESALE

    @Column(nullable = false, length = 50)
    /** PENDING → PROCESSING (xác nhận đơn, trừ tồn) → …; REJECTED/CANCELLED hoàn tồn nếu đã trừ. */
    private String status; // PENDING, PROCESSING, SHIPPED, COMPLETED, CANCELLED, APPROVED, REJECTED

    @Column(name = "payment_method", nullable = false, length = 50)
    private String paymentMethod; // COD, VNPAY, NET_TERMS

    @Column(name = "payment_status", nullable = false, length = 50)
    private String paymentStatus; // PENDING, PAID, FAILED, REFUNDED

    @Column(name = "total_amount", precision = 15, scale = 2, nullable = false)
    private BigDecimal totalAmount;

    @Column(name = "shipping_fee", precision = 15, scale = 2)
    private BigDecimal shippingFee;

    @Column(name = "tax_amount", precision = 15, scale = 2)
    private BigDecimal taxAmount;

    @Column(name = "paid_amount", precision = 15, scale = 2)
    private BigDecimal paidAmount;

    @Column(name = "debt_amount", precision = 15, scale = 2)
    private BigDecimal debtAmount;

    @Column(name = "due_date")
    private LocalDateTime dueDate;

    @Column(name = "full_name", length = 255)
    private String fullName;

    @Column(length = 20)
    private String phone;

    @Column(name = "shipping_address", columnDefinition = "TEXT")
    private String shippingAddress;

    /** RULE | STANDARD | EXPRESS — cách tính phí ship khách chọn */
    @Column(name = "shipping_selection", length = 20)
    private String shippingSelection;

    /** Mã tỉnh/thành (provinces.open-api.vn) dùng khớp vùng ship */
    @Column(name = "shipping_province_code", length = 32)
    private String shippingProvinceCode;

    @Column(columnDefinition = "TEXT")
    private String note;

    @Column(name = "coupon_code", length = 50)
    private String couponCode;

    @Column(name = "discount_amount", precision = 15, scale = 2)
    private BigDecimal discountAmount;

    @Column(name = "created_at")
    private LocalDateTime createdAt;

    @Column(name = "stock_reduced")
    private Boolean stockReduced = false;

    /** Admin đánh dấu đã chuyển khoản hoàn tiền (đơn hủy + đã thu QR/CK). */
    @Column(name = "refund_processed_at")
    private LocalDateTime refundProcessedAt;

    /** Khách xác nhận đã nhận lại tiền — đóng vòng hoàn tiền, đồng bộ báo cáo. */
    @Column(name = "refund_confirmed_by_customer_at")
    private LocalDateTime refundConfirmedByCustomerAt;

    @OneToMany(mappedBy = "order", cascade = CascadeType.ALL, orphanRemoval = true)
    @JsonManagedReference
    private List<OrderItem> items;

    @PrePersist
    protected void onCreate() {
        createdAt = LocalDateTime.now();
        if (paidAmount == null) paidAmount = BigDecimal.ZERO;
        if (debtAmount == null) debtAmount = totalAmount.subtract(paidAmount);
    }
}
